Address review: use List.of() instead of FQN java.util.Collections.emptyList()
EntityDAO.listDescendantIdFqnByPrefix used a fully-qualified Collections.emptyList(),
violating the no-inline-FQN guideline. Switch to List.of() (Java 21, already imported),
matching the four sibling returns in the same file.